# sdg_classifier

./: .gitignore  README.md  duplication.py  model.py  preparation.py  pyproject.toml  train.py  train_lora.py
