[tool.poetry]
name = "sdg-classifier"
version = "0.1.0"
description = ""
authors = ["Nicolas Huber <nicolas.huber2@uzh.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.14"
sentence-transformers = "^3.3.1"
torch = "2.1.1"
pandas = "^2.2.3"
numpy = "<2.0"
python-dotenv = "^1.0.1"
pydantic = "^2.10.3"
pydantic-settings = "^2.6.1"
keybert = "^0.8.5"
bertopic = "^0.16.4"
nltk = "^3.9.1"
xmltodict = "^0.14.2"
datamapplot = "^0.4.2"
umap-learn = "^0.5.7"
scikit-learn = "^1.6.0"
seaborn = "^0.13.2"
datasets = "^3.2.0"
scikit-multilearn = "^0.2.0"
accelerate = "^1.2.0"
peft = "^0.14.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
